--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <!--Banner-->
       <section class="hero">
         <div class="container">
-          <h1 class="text-hero">Effective Solutions for Your Business</h1>
-          <button type="button" class="button-hero">Order Service</button>  
+              <h1 class="text-hero">Effective Solutions for Your Business</h1>
+              <button type="button" class="button-hero">Order Service</button>
         </div>
       </section>
 
@@ -48,24 +48,44 @@
         <div class="container">
           <h2 class="visually-hidden">Our features</h2>
           <ul class="feature-list">
-            <li class="feature-item">
+            <li class="feature-item icon-antenna">
+              <div class="feature-field-icon">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="text-item">Strategy</h3>
               <p class="text-features">Our goal is to identify the business
                 problem to walk away with the perfect and creative solution.</p>
             </li>
-            <li class="feature-item">
+            <li class="feature-item icon-clock">
+              <div class="feature-field-icon">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="text-item">Punctuality</h3>
               <p class="text-features">
                 Bring the key message to the brand's audience for the best price within the shortest possible time.
               </p>
             </li>
-            <li class="feature-item">
+            <li class="feature-item icon-diagram">
+              <div class="feature-field-icon">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="text-item">Diligence</h3>
               <p class="text-features">
                 Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="feature-item">
+            <li class="feature-item icon-astronaut">
+              <div class="feature-field-icon">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="text-item">Technologies</h3>
               <p class="text-features">Design practice focused on digital experiences. We bring forth a deep passion for
                 problem-solving.</p>
@@ -97,6 +117,28 @@
               <div class="card">
                 <h3 class="text-item">Mark Guerrero</h3>
                 <p>Product Designer</p>
+                <ul class="social">
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon"><use href="./images/sprite.svg#instagram"></use></svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon"><use href="./images/sprite.svg#twitter"></use>
+                    </svg></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon"><use href="./images/sprite.svg#facebook"></use>
+                    </svg></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon"><use href="./images/sprite.svg#linkedin"></use>
+                    </svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -104,6 +146,33 @@
               <div class="card">
                 <h3 class="text-item">Tom Ford</h3>
                 <p>Frontend Developer</p>
+                <ul class="social">
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon">
+                        <use href="./images/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -111,6 +180,33 @@
               <div class="card">
                 <h3 class="text-item">Camila Garcia</h3>
                 <p>Marketing</p>
+                <ul class="social">
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon">
+                        <use href="./images/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -118,23 +214,97 @@
               <div class="card">
                 <h3 class="text-item">Daniel Wilson</h3>
                 <p>UI Designer</p>
+                <ul class="social">
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon">
+                        <use href="./images/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="link-icon">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+
+      <!-- Section clients -->
+      <section class="clients">
+        <div class="container">
+          <h2 class="text-section">clientss</h2>
+          <ul class="clients-list">
+            <li class="clients-item">
+              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/sprite.svg#Logo-1"></use></svg></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/sprite.svg#Logo-2"></use></svg></a>
+              </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/sprite.svg#Logo-3"></use></svg></a>
+              </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/sprite.svg#Logo-4"></use></svg></a>
+              </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/sprite.svg#Logo-5"></use></svg></a>
+              </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/sprite.svg#Logo-6"></use></svg></a>
+              </li>
+          </ul>
+        </div>
+
+      </section>
     </main>
 
     <!-- Footer-->
-    <footer class="endscreen">
-      <div class="container">
-        <div class="logo-footer">
-          <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-          </p>
+      <footer class="endscreen">
+        <div class="container">
+          <div class="footer-content">
+            <div class="logo-footer">
+              <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
+              <p class="footer-text">
+                Increase the flow of clientss and sales for your business with digital marketing & growth solutions.
+              </p>
+            </div>
+            <div class="footer-social">
+              <p class="footer-text">Social media</p>
+              <ul class="social">
+              <li class="footer-social-item">
+                      <a href="" class="social-link"><svg class="link-icon"><use href="./images/sprite.svg#instagram"></use></svg></a>
+                    </li>
+                    <li class="footer-social-item">
+                      <a href="" class="social-link"><svg class="link-icon"><use href="./images/sprite.svg#twitter"></use></svg></a>
+                    </li>
+                    <li class="footer-social-item">
+                      <a href="" class="social-link"><svg class="link-icon"><use href="./images/sprite.svg#facebook"></use></svg></a>
+                    </li>
+                    <li class="footer-social-item">
+                      <a href="" class="social-link"><svg class="link-icon"><use href="./images/sprite.svg#linkedin"></use></svg></a>
+                    </li>
+              </ul>
+            </div>
+          </div>
         </div>
-      </div>
-    </footer>
+      </footer>
  </body>
 </html>
