--- a/portfolio.html
+++ b/portfolio.html
@@ -133,11 +133,34 @@
     <!-- Footer-->
     <footer class="endscreen">
         <div class="container">
-            <div class="logo-footer">
-                <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
-                <p class="footer-text">
-                    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-                </p>
+            <div class="footer-content">
+                <div class="logo-footer">
+                    <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
+                    <p class="footer-text">
+                        Increase the flow of clientss and sales for your business with digital marketing & growth solutions.
+                    </p>
+                </div>
+                <div class="footer-social">
+                    <p class="footer-text">Social media</p>
+                    <ul class="social">
+                        <li class="footer-social-item">
+                            <a href="" class="social-link"><svg class="link-icon">
+                                    <use href="./images/sprite.svg#instagram"></use></svg></a>
+                        </li>
+                        <li class="footer-social-item">
+                            <a href="" class="social-link"><svg class="link-icon">
+                                    <use href="./images/sprite.svg#twitter"></use></svg></a>
+                        </li>
+                        <li class="footer-social-item">
+                            <a href="" class="social-link"><svg class="link-icon">
+                                    <use href="./images/sprite.svg#facebook"></use></svg></a>
+                        </li>
+                        <li class="footer-social-item">
+                            <a href="" class="social-link"><svg class="link-icon">
+                                    <use href="./images/sprite.svg#linkedin"></use></svg></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
