--- a/portfolio.html
+++ b/portfolio.html
@@ -144,20 +144,24 @@
                     <p class="footer-text">Social media</p>
                     <ul class="social">
                         <li class="footer-social-item">
-                            <a href="" class="social-link"><svg class="link-icon">
-                                    <use href="./images/sprite.svg#instagram"></use></svg></a>
+                            <a href="" class="footer-social-link"><svg class="link-icon">
+                                    <use href="./images/sprite.svg#instagram"></use>
+                                </svg></a>
                         </li>
                         <li class="footer-social-item">
-                            <a href="" class="social-link"><svg class="link-icon">
-                                    <use href="./images/sprite.svg#twitter"></use></svg></a>
+                            <a href="" class="footer-social-link"><svg class="link-icon">
+                                    <use href="./images/sprite.svg#twitter"></use>
+                                </svg></a>
                         </li>
                         <li class="footer-social-item">
-                            <a href="" class="social-link"><svg class="link-icon">
-                                    <use href="./images/sprite.svg#facebook"></use></svg></a>
+                            <a href="" class="footer-social-link"><svg class="link-icon">
+                                    <use href="./images/sprite.svg#facebook"></use>
+                                </svg></a>
                         </li>
                         <li class="footer-social-item">
-                            <a href="" class="social-link"><svg class="link-icon">
-                                    <use href="./images/sprite.svg#linkedin"></use></svg></a>
+                            <a href="" class="footer-social-link"><svg class="link-icon">
+                                    <use href="./images/sprite.svg#linkedin"></use>
+                                </svg></a>
                         </li>
                     </ul>
                 </div>
