--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li class="feature-item icon-antenna">
               <div class="feature-field-icon">
                 <svg class="feature-icon">
-                  <use href="./images/sprite.svg#antenna"></use>
+                  <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
               <h3 class="text-item">Strategy</h3>
@@ -61,7 +61,7 @@
             <li class="feature-item icon-clock">
               <div class="feature-field-icon">
                 <svg class="feature-icon">
-                  <use href="./images/sprite.svg#clock"></use>
+                  <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
               <h3 class="text-item">Punctuality</h3>
@@ -72,7 +72,7 @@
             <li class="feature-item icon-diagram">
               <div class="feature-field-icon">
                 <svg class="feature-icon">
-                  <use href="./images/sprite.svg#diagram"></use>
+                  <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
               <h3 class="text-item">Diligence</h3>
@@ -83,7 +83,7 @@
             <li class="feature-item icon-astronaut">
               <div class="feature-field-icon">
                 <svg class="feature-icon">
-                  <use href="./images/sprite.svg#astronaut"></use>
+                  <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="text-item">Technologies</h3>
@@ -120,22 +120,22 @@
                 <ul class="social">
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg class="link-icon"><use href="./images/sprite.svg#instagram"></use></svg>
+                      <svg class="link-icon"><use href="./images/icons.svg#instagram"></use></svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg class="link-icon"><use href="./images/sprite.svg#twitter"></use>
+                      <svg class="link-icon"><use href="./images/icons.svg#twitter"></use>
                     </svg></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg class="link-icon"><use href="./images/sprite.svg#facebook"></use>
+                      <svg class="link-icon"><use href="./images/icons.svg#facebook"></use>
                     </svg></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg class="link-icon"><use href="./images/sprite.svg#linkedin"></use>
+                      <svg class="link-icon"><use href="./images/icons.svg#linkedin"></use>
                     </svg></a>
                   </li>
                 </ul>
@@ -150,26 +150,26 @@
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="link-icon">
-                        <use href="./images/sprite.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="link-icon">
-                        <use href="./images/sprite.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="link-icon">
-                        <use href="./images/sprite.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="link-icon">
-                        <use href="./images/sprite.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg></a>
                   </li>
                 </ul>
@@ -184,26 +184,26 @@
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="link-icon">
-                        <use href="./images/sprite.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="link-icon">
-                        <use href="./images/sprite.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="link-icon">
-                        <use href="./images/sprite.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="link-icon">
-                        <use href="./images/sprite.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg></a>
                   </li>
                 </ul>
@@ -218,26 +218,26 @@
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="link-icon">
-                        <use href="./images/sprite.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="link-icon">
-                        <use href="./images/sprite.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="link-icon">
-                        <use href="./images/sprite.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="link-icon">
-                        <use href="./images/sprite.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg></a>
                   </li>
                 </ul>
@@ -253,22 +253,22 @@
           <h2 class="text-section">clientss</h2>
           <ul class="clients-list">
             <li class="clients-item">
-              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/sprite.svg#Logo-1"></use></svg></a>
+              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/icons.svg#Logo-1"></use></svg></a>
             </li>
             <li class="clients-item">
-              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/sprite.svg#Logo-2"></use></svg></a>
+              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/icons.svg#Logo-2"></use></svg></a>
               </li>
             <li class="clients-item">
-              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/sprite.svg#Logo-3"></use></svg></a>
+              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/icons.svg#Logo-3"></use></svg></a>
               </li>
             <li class="clients-item">
-              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/sprite.svg#Logo-4"></use></svg></a>
+              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/icons.svg#Logo-4"></use></svg></a>
               </li>
             <li class="clients-item">
-              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/sprite.svg#Logo-5"></use></svg></a>
+              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/icons.svg#Logo-5"></use></svg></a>
               </li>
             <li class="clients-item">
-              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/sprite.svg#Logo-6"></use></svg></a>
+              <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/icons.svg#Logo-6"></use></svg></a>
               </li>
           </ul>
         </div>
@@ -290,16 +290,16 @@
               <p class="footer-text">Social media</p>
               <ul class="social">
               <li class="footer-social-item">
-                      <a href="" class="footer-social-link"><svg class="link-icon"><use href="./images/sprite.svg#instagram"></use></svg></a>
+                      <a href="" class="footer-social-link"><svg class="link-icon"><use href="./images/icons.svg#instagram"></use></svg></a>
                     </li>
                     <li class="footer-social-item">
-                      <a href="" class="footer-social-link"><svg class="link-icon"><use href="./images/sprite.svg#twitter"></use></svg></a>
+                      <a href="" class="footer-social-link"><svg class="link-icon"><use href="./images/icons.svg#twitter"></use></svg></a>
                     </li>
                     <li class="footer-social-item">
-                      <a href="" class="footer-social-link"><svg class="link-icon"><use href="./images/sprite.svg#facebook"></use></svg></a>
+                      <a href="" class="footer-social-link"><svg class="link-icon"><use href="./images/icons.svg#facebook"></use></svg></a>
                     </li>
                     <li class="footer-social-item">
-                      <a href="" class="footer-social-link"><svg class="link-icon"><use href="./images/sprite.svg#linkedin"></use></svg></a>
+                      <a href="" class="footer-social-link"><svg class="link-icon"><use href="./images/icons.svg#linkedin"></use></svg></a>
                     </li>
               </ul>
             </div>
