--- a/portfolio.html
+++ b/portfolio.html
@@ -145,22 +145,22 @@
                     <ul class="social">
                         <li class="footer-social-item">
                             <a href="" class="footer-social-link"><svg class="link-icon">
-                                    <use href="./images/sprite.svg#instagram"></use>
+                                    <use href="./images/icons.svg#instagram"></use>
                                 </svg></a>
                         </li>
                         <li class="footer-social-item">
                             <a href="" class="footer-social-link"><svg class="link-icon">
-                                    <use href="./images/sprite.svg#twitter"></use>
+                                    <use href="./images/icons.svg#twitter"></use>
                                 </svg></a>
                         </li>
                         <li class="footer-social-item">
                             <a href="" class="footer-social-link"><svg class="link-icon">
-                                    <use href="./images/sprite.svg#facebook"></use>
+                                    <use href="./images/icons.svg#facebook"></use>
                                 </svg></a>
                         </li>
                         <li class="footer-social-item">
                             <a href="" class="footer-social-link"><svg class="link-icon">
-                                    <use href="./images/sprite.svg#linkedin"></use>
+                                    <use href="./images/icons.svg#linkedin"></use>
                                 </svg></a>
                         </li>
                     </ul>
