hover focus переносит на ссылки

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <!-- Section clients -->
       <section class="clients">
         <div class="container">
-          <h2 class="text-section">clientss</h2>
+          <h2 class="text-section">Customers</h2>
           <ul class="clients-list">
             <li class="clients-item">
               <a href="" class="clients-link"><svg class="clients-icon"><use href="./images/icons.svg#Logo-1"></use></svg></a>
