добавил коментарий к Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+    <!-- Header -->
 <header class="header">
     <div class="container">
         <!--Navigation menu-->
@@ -32,6 +33,7 @@
         </ul>   
     </div>
 </header>
+<!-- main -->
     <main>
         <section class="developments">
             <div class="container">
